# mlx9064x-rs

./: .build.yml  CHANGELOG.md  Cargo.toml  ReadMe.md  mlx9064x_timing.ods
.cargo/: config.toml
docs/: header.html
examples/: temperatures.rs  terminal-temperatures.rs  true-frame-rate.rs
mlx9064x/: Cargo.toml
mlx9064x-test-data/: Cargo.toml
mlx9064x-test-data/src/: eeprom_data.rs  i2c_mock.rs  lib.rs  mlx90640_example_data.rs
mlx9064x/benches/: load_calibration.rs  raw_to_temperatures.rs
mlx9064x/src/: calculations.rs  common.rs  driver.rs  lib.rs  register.rs  util.rs
mlx9064x/src/mlx90640/: address.rs  eeprom.rs  mod.rs
mlx9064x/src/mlx90641/: address.rs  eeprom.rs  hamming.rs  mod.rs
mlx9064x/src/test/: eeprom_data.rs  mlx90640_example_data.rs
src/: calculations.rs  camera.rs  common.rs  driver.rs  error.rs  katex.html  lib.rs  register.rs  util.rs
src/mlx90640/: address.rs  eeprom.rs  mod.rs  ram.rs
src/mlx90641/: address.rs  eeprom.rs  hamming.rs  mod.rs
src/test/: eeprom_data.rs  i2c_mock.rs  mlx90640_example_data.rs  mod.rs
src/util/: mod.rs  num.rs
