[package]
authors = ["Will Ross <paxswill@paxswill.com>"]
categories = ["embedded", "hardware-support"]
description = "Library for interfacing with Melexis MLX9064* thermal cameras"
edition = "2018"
keywords = ["embedded-hal", "thermal-camera", "thermopile", "mlx90640", "mlx90641"]
license = "Apache-2.0"
name = "mlx9064x"
version = "0.0.1"
readme = "ReadMe.md"

[dependencies]
arrayvec = { version = "0.7", default-features = false }
bytes = { version = "1", default-features = false }
embedded-hal = "0.2.5"
num_enum = "0.5"
paste = "1"

[dev-dependencies]
embedded-hal-mock = "0.7"
float-cmp = "0.8.0"
linux-embedded-hal = "0.3"

[features]
default = ["std"]
std = ["arrayvec/std", "bytes/std"]
